--- a/cayez_reposteria/register/register.html
+++ b/cayez_reposteria/register/register.html
@@ -12,15 +12,15 @@
 </head>
 
 <body>
-    <div class="d-flex align-items-center h-100">
+    <div class="d-flex align-items-center h-100 intro">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-xl-5 col-md-8 bg-white rounded-3 shadow-5-strong">
+                <div class="col-xl-5 col-md-8 rounded-3 shadow-5-strong">
                     <div class="text-center mt-3"><span class="title">Bienvenido, Registrate!</span></div>
                     <form>
                         <div class="form-outline mb-4">
                             <label class="form-label">Email:</label>
-                            <input type="email" class="form-control mb-2" placeholder="Ingrese acá su Email" />
+                            <input type="email" class="form-control mb-2 borde-rosado" placeholder="Ingrese acá su Email" />
                         </div>
                         <div class="form-outline mb-4">
                             <label class="form-label">Usuario:</label>
@@ -32,14 +32,14 @@
 
                         </div>
                         <div class="row mb-3">
-                            <button type="submit" class="btn btn-primary btn-block mx-auto">Ingresar</button>
+                            <button type="submit" class="btn btn-primary btn-block mx-auto btn-cayez">Registrar Cuenta</button>
                         </div>
                         <div class="row">
                             <div class="col text-center">
                                 <br>
                                 <small><span class="text-grey">Olvidó su password? </span><i
-                                        class="fa-solid fa-question text-grey"></i></small> <a
-                                    href="#" class="link"> Recuperar password</a>
+                                        class="fa-solid fa-question text-grey"></i></small> <a href="#" class="link">
+                                    Recuperar password</a>
                             </div>
                         </div>
                     </form>
