--- a/cayez_reposteria/login/login.html
+++ b/cayez_reposteria/login/login.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-    <div class="d-flex align-items-center h-100">
+    <div class="d-flex align-items-center h-100 intro">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-xl-5 col-md-8 bg-white rounded-3 shadow-5-strong">
+                <div class="col-xl-5 col-md-8 rounded-3 shadow-5-strong">
                     <div class="text-center mt-3"><span class="title">Bienvenido, logeate!</span></div>
                     <form>
                         <div class="form-outline mb-4">
@@ -29,7 +29,7 @@
 
                         </div>
                         <div class="row mb-3">
-                            <a class="btn btn-primary btn-block mx-auto" href="../main/main.html">Ingresar</a>
+                            <a class="btn btn-primary btn-block mx-auto btn-cayez" href="../main/main.html">Ingresar</a>
                         </div>
                         <div class="row">
                             <div class="col text-center">
